--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,23 +1,43 @@
-<div *ngIf="dataLoaded == false" class="spinner-border text-primary" role="status">
+<div
+  *ngIf="dataLoaded == false"
+  class="spinner-border text-primary"
+  role="status"
+>
   <span class="visually-hidden">Loading...</span>
 </div>
-<table *ngIf= "dataLoaded == true" class="table">
+<div class="mb-3">
+  <label for="filterText" class="form-label">Ürün Ara</label>
+  <input
+    type="text"
+    [(ngModel)]="filterText"
+    class="form-control"
+    id="filterText"
+    placeholder="arama ifadesi giriniz"
+  />
+</div>
+
+<div *ngIf="filterText" class="alert alert-success">
+  {{ filterText }} aradınız
+</div>
+<table *ngIf="dataLoaded == true" class="table">
   <thead>
     <tr>
       <td>Id</td>
       <td>Ürün Adı</td>
       <td>Kategori Id</td>
       <td>Fiyat</td>
+      <td>KDV'li Fiyat</td>
       <td>Stok Adedi</td>
     </tr>
   </thead>
 
   <tbody>
-    <tr *ngFor="let product of products">
+    <tr *ngFor="let product of products | filterPipe: filterText">
       <td>{{ product.productId }}</td>
-      <td>{{ product.productName }}</td>
+      <td>{{ product.productName | uppercase }}</td>
       <td>{{ product.categoryId }}</td>
-      <td>{{ product.unitPrice }}</td>
+      <td>{{ product.unitPrice | currency }}</td>
+      <td>{{ product.unitPrice | vatAdded: 18 | currency }}</td>
       <td>{{ product.unitsInStock }}</td>
     </tr>
   </tbody>
